--- a/orders-service/docker-compose.yml
+++ b/orders-service/docker-compose.yml
@@ -1,26 +1,31 @@
 version: "3.1"
 services:
-  mongodb:
-    image: mongo
+  order_db_host:
+    image: postgres
     restart: on-failure
     ports:
-      - 27017:27017
+      - 5100:5432
     environment:
-      MONGO_INITDB_ROOT_USERNAME: mongoUser
-      MONGO_INITDB_ROOT_PASSWORD: mongoPass
+      POSTGRES_USER: postgres_user
+      POSTGRES_PASSWORD: postgres_pass
+      POSTGRES_DB: order_db
     volumes: 
-      - db:/data/db
+      - ./orderdb:/var/lib/postgresql/data
+      - ./db/orderInit.sql:/docker-entrypoint-initdb.d/orderInit.sql
       
-  order-service:
+  order_service:
     restart: on-failure
     build: 
-      context: ./
+      context: ./orders-service
       dockerfile: Dockerfile
+    environment:
+      - POSTGRES_URI=postgresql://postgres_user:postgres_pass@order_db_host:5432/order_db
     ports:
-      - 3200:3200
+      - 3300:3300
     depends_on:
-      - mongodb
+      - order_db_host
     command: npm run start
 
 volumes:
-  db:
+  orderdb:
+    driver: local
