--- a/users-service/docker-compose.yml
+++ b/users-service/docker-compose.yml
@@ -1,31 +1,31 @@
 version: "3.1"
 services:
-  db:
+  user_db_host:
     image: postgres
     restart: on-failure
     ports:
       - 5432:5432
     environment:
-      POSTGRES_USER: postgresUser
-      POSTGRES_PASSWORD: postgresPass
-      POSTGRES_DB: postgresDB
+      POSTGRES_USER: postgres_user
+      POSTGRES_PASSWORD: postgres_pass
+      POSTGRES_DB: user_db
     volumes: 
-      - db:/var/lib/postgresql/data
-      - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./userdb:/var/lib/postgresql/data
+      - ./db/userInit.sql:/docker-entrypoint-initdb.d/userInit.sql
       
-  user-service:
+  user_service:
     restart: on-failure
     build: 
-      context: ./
+      context: ./users-service
       dockerfile: Dockerfile
     environment:
-      - DATABASE_URL=postgresql://postgresUser:postgresPass@db:5432/postgresDB
+      - POSTGRES_URI=postgresql://postgres_user:postgres_pass@user_db_host:5432/user_db
     ports:
       - 3100:3100
     depends_on:
-      - db
+      - user_db_host
     command: npm run start
 
 volumes:
-  db:
+  userdb:
     driver: local
