--- a/users-service/docker-compose.yml
+++ b/users-service/docker-compose.yml
@@ -19,7 +19,13 @@ services:
       context: ./users-service
       dockerfile: Dockerfile
     environment:
-      - POSTGRES_URI=postgresql://postgres_user:postgres_pass@user_db_host:5432/user_db
+      USER_SERVICE_PORT: 3100
+      POSTGRES_USER: postgres_user
+      POSTGRES_PASSWORD: postgres_pass
+      POSTGRES_DB: user_db
+      POSTGRES_PORT: 5432
+      POSTGRES_HOST: user_db_host
+      POSTGRES_URI: postgresql://postgres_user:postgres_pass@user_db_host:5432/user_db
     ports:
       - 3100:3100
     depends_on:
