--- a/orders-service/docker-compose.yml
+++ b/orders-service/docker-compose.yml
@@ -19,7 +19,13 @@ services:
       context: ./orders-service
       dockerfile: Dockerfile
     environment:
-      - POSTGRES_URI=postgresql://postgres_user:postgres_pass@order_db_host:5432/order_db
+      ORDER_SERVICE_PORT: 3300
+      POSTGRES_USER: postgres_user
+      POSTGRES_PASSWORD: postgres_pass
+      POSTGRES_DB: order_db
+      POSTGRES_PORT: 5432
+      POSTGRES_HOST: order_db_host
+      POSTGRES_URI: postgresql://postgres_user:postgres_pass@order_db_host:5432/order_db
     ports:
       - 3300:3300
     depends_on:
