all services run in one nginx port

--- a/nginx.conf
+++ b/nginx.conf
@@ -18,7 +18,7 @@ http {
   server {
     listen 8080;
 
-    server_name user_service;
+    server_name services;
 
     location /user/ {
       proxy_http_version 1.1;
@@ -32,13 +32,6 @@ http {
       proxy_set_header X-Forwarded-Proto $scheme;
       proxy_pass http://user_service;
     }
-  }
-
-
-  server {
-    listen 8081;
-
-    server_name product_service;
 
     location /product/ {
       proxy_http_version 1.1;
@@ -52,12 +45,6 @@ http {
       proxy_set_header X-Forwarded-Proto $scheme;
       proxy_pass http://product_service;
     }
-  }
-
-  server {
-    listen 8082;
-
-    server_name order_service;
 
     location /order/ {
       proxy_http_version 1.1;
