--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,8 +53,11 @@ services:
   rabbitmq:
       image: rabbitmq
       ports:
-        - '5672:5672'
-        - '15672:15672'
+        - 5672:5672
+        - 15672:15672
+      volumes:
+        - ~/.docker-conf/rabbitmq/data/:/var/lib/rabbitmq/
+        - ~/.docker-conf/rabbitmq/log/:/var/log/rabbitmq
       networks:
       - cloud-services
 
@@ -110,10 +113,24 @@ services:
       POSTGRES_PORT: 5432
       POSTGRES_HOST: order_db_host
       POSTGRES_URI: postgresql://postgres_user:postgres_pass@order_db_host:5432/order_db?sslmode=disable
+      AMQP_URL: amqp://guest:guest@rabbitmq:5672
     ports:
       - 3300:3300
     depends_on:
       - order_db_host
+      - rabbitmq
+    command: npm run start
+    networks:
+      - cloud-services
+
+  shipping_service:
+    restart: on-failure
+    build: 
+      context: ./shipping-service
+      dockerfile: Dockerfile
+    environment:
+      AMQP_URL: amqp://rabbitmq:5672
+    depends_on:
       - rabbitmq
     command: npm run start
     networks:
@@ -128,6 +145,7 @@ services:
       - user_service
       - product_service
       - order_service
+      - shipping_service
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
     networks:
