--- a/orders-service/package.json
+++ b/orders-service/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "express-postgresql-server",
+  "name": "order-service",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,7 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.4.0",
+    "amqplib": "^0.10.3",
     "express": "^4.18.2",
     "pg": "^8.11.0"
   }
