--- a/shipping-service/package.json
+++ b/shipping-service/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "product-service",
+  "name": "shipping-service",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,7 +11,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^7.2.2"
+    "amqplib": "^0.10.3"
   }
 }
