--- a/users-service/package.json
+++ b/users-service/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "express-postgresql-server",
+  "name": "user-service",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
