updated as per cloud req.

--- a/products-service/Dockerfile
+++ b/products-service/Dockerfile
@@ -1,6 +1,8 @@
 FROM node:18-alpine as base
 
 ENV PRODUCT_SERVICE_PORT=3200
+ENV MONGO_DB=@cloudmongodb@
+ENV MONGO_URL=mongodb://cloudmongodb:PRGybKucziIGNJchjSqqn5vzPpU9jvyFOiIxjDlB8dcJ8PtPeRfroKqBBPAynx5HmpmfbBCCk7FtACDbluFCQQ==@cloudmongodb.mongo.cosmos.azure.com:10255/?ssl=true&retrywrites=false&maxIdleTimeMS=120000&appName=@cloudmongodb@
 
 WORKDIR /app
 
