--- a/products-service/docker-compose.yml
+++ b/products-service/docker-compose.yml
@@ -19,6 +19,7 @@ services:
       PRODUCT_SERVICE_PORT: 3200
       MONGO_DB: mongo_db
       MONGO_HOST: product_db_host
+      MONGO_URL: mongodb://mongo_db:27017/product_db_host
     depends_on:
       - product_db_host
     command: npm run start
