--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -92,6 +92,7 @@ services:
     environment:
       MONGO_DB: mongo_db
       MONGO_HOST: product_db_host
+      MONGO_URL: mongodb://mongo_db:27017/product_db_host
     depends_on:
       - product_db_host
     command: npm run start
